<resources>
    <string name="app_name">TodoAppTop</string>
    <string name="button_add">Button Add</string>
    <string name="addTask_taskDescription">Descrição da atividade</string>
    <string name="radioButton_high_priority">Alta</string>
    <string name="radio_buttom_medium_priority">Média</string>
    <string name="radioButton_low_priority">Baixa</string>
    <string name="button_add_task">Adicionar</string>
    <string name="textView_priority_title">Prioridade</string>
    <string name="toastMessage_create_success">Atividade criada com sucesso</string>
</resources>