<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <EditText
        android:id="@+id/editText_task_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/addTask_taskDescription"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Jogar o lixo na lixeira" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/editText_task_description"
        app:layout_constraintTop_toBottomOf="@+id/editText_task_description"
        tools:text="Prioridade" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="@+id/editText_task_description"
        app:layout_constraintStart_toStartOf="@+id/editText_task_description"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radio_button_high_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:onClick="setPriorityValue"
            android:text="@string/radioButton_high_priority" />

        <RadioButton
            android:id="@+id/radio_button_medium_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:onClick="setPriorityValue"
            android:text="@string/radio_buttom_medium_priority" />

        <RadioButton
            android:id="@+id/radio_button_low_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:onClick="setPriorityValue"
            android:text="@string/radioButton_low_priority" />
    </RadioGroup>

    <Button
        android:id="@+id/button_add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="addTask"
        android:text="@string/button_add_task"
        app:layout_constraintEnd_toEndOf="@+id/editText_task_description"
        app:layout_constraintStart_toStartOf="@+id/editText_task_description"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>